Modifica src logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a class="logo" href="#">
-        <img src="../img/logo_v2_negro.png" alt="Logo fakeMdn" title="Logo" />
+        <img src="img/logo_v2_negro.png" alt="Logo fakeMdn" title="Logo" />
       </a>
       <nav class="navbar">
         <ul>
@@ -110,7 +110,7 @@
       <section>
         <a class="logo" href="#">
           <img
-            src="../img/logo_v2_blanco.png"
+            src="img/logo_v2_blanco.png"
             alt="Logo fakeMdn"
             title="Logo"
           />
