--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>MDN Clone</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="css/templateStyle.css"
-    />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/templateStyle.css" />
   </head>
   <body>
     <header>
@@ -35,85 +30,57 @@
       <aside class="sidebar">
         <h3>Métodos</h3>
         <ul>
-          <li class="sidebar-item">
-            <a href="functions/_forEach.html">_forEach</a>
-          </li>
+          <li class="sidebar-item"><a href="functions/_forEach.html">_forEach</a></li>
           <li class="sidebar-item"><a href="functions/_some.html">_some</a></li>
-          <li class="sidebar-item">
-            <a href="functions/_every.html">_every</a>
-          </li>
+          <li class="sidebar-item"><a href="functions/_every.html">_every</a></li>
           <li class="sidebar-item"><a href="functions/_find.html">_find</a></li>
-          <li class="sidebar-item">
-            <a href="functions/_every.html">_every</a>
-          </li>
+          <li class="sidebar-item"><a href="functions/_every.html">_every</a></li>
           <li class="sidebar-item"><a href="functions/_find.html">_find</a></li>
-          <li class="sidebar-item">
-            <a href="functions/_includes">_includes</a>
-          </li>
+          <li class="sidebar-item"><a href="functions/_includes">_includes</a></li>
           <li class="sidebar-item"><a href="functions/_map">_map</a></li>
           <li class="sidebar-item"><a href="functions/_filter">_filter</a></li>
           <li class="sidebar-item"><a href="functions/_reduce">_reduce</a></li>
-          <li class="sidebar-item">
-            <a href="functions/_indexOf">_indexOf</a>
-          </li>
-          <li class="sidebar-item">
-            <a href="functions/_indexOfRecursive">_indexOfRecursive</a>
-          </li>
-          <li class="sidebar-item">
-            <a href="functions/_intersection">_intersection</a>
-          </li>
+          <li class="sidebar-item"><a href="functions/_indexOf">_indexOf</a></li>
+          <li class="sidebar-item"><a href="functions/_indexOfRecursive">_indexOfRecursive</a></li>
+          <li class="sidebar-item"><a href="functions/_intersection">_intersection</a></li>
           <li class="sidebar-item"><a href="functions/_union">_union</a></li>
           <li class="sidebar-item"><a href="functions/_sum">_sum</a></li>
           <li class="sidebar-item"><a href="functions/_min">_min</a></li>
           <li class="sidebar-item"><a href="functions/_max">_max</a></li>
-          <li class="sidebar-item">
-            <a href="functions/_findIndex">_findIndex</a>
-          </li>
-          <li class="sidebar-item">
-            <a href="functions/_lastIndexOf">_lastIndexOf</a>
-          </li>
+          <li class="sidebar-item"><a href="functions/_findIndex">_findIndex</a></li>
+          <li class="sidebar-item"><a href="functions/_lastIndexOf">_lastIndexOf</a></li>
           <li class="sidebar-item"><a href="functions/_concat">_concat</a></li>
-          <li class="sidebar-item">
-            <a href="functions/_isEqual">_isEqual</a>
-          </li>
+          <li class="sidebar-item"><a href="functions/_isEqual">_isEqual</a></li>
         </ul>
       </aside>
       <section class="content">
         <p>
-          JavaScript (JS) is a lightweight interpreted or just-in-time compiled
-          programming language with first-class functions. While it is most
-          well-known as the scripting language for Web pages, many non-browser
-          environments also use it, such as Node.js, Apache CouchDB and Adobe
-          Acrobat. JavaScript is a prototype-based, multi-paradigm, dynamic
-          language, supporting object-oriented, imperative, and declarative
-          (e.g. functional programming) styles. Read more about JavaScript.
+          JavaScript (JS) is a lightweight interpreted or just-in-time compiled programming language
+          with first-class functions. While it is most well-known as the scripting language for Web
+          pages, many non-browser environments also use it, such as Node.js, Apache CouchDB and
+          Adobe Acrobat. JavaScript is a prototype-based, multi-paradigm, dynamic language,
+          supporting object-oriented, imperative, and declarative (e.g. functional programming)
+          styles. Read more about JavaScript.
         </p>
         <p>
-          This section is dedicated to the JavaScript language itself, and not
-          the parts that are specific to Web pages or other host environments.
-          For information about APIs specific to Web pages, please see Web APIs
-          and DOM.
+          This section is dedicated to the JavaScript language itself, and not the parts that are
+          specific to Web pages or other host environments. For information about APIs specific to
+          Web pages, please see Web APIs and DOM.
         </p>
         <p>
-          The standard for JavaScript is ECMAScript. As of 2012, all modern
-          browsers fully support ECMAScript 5.1. Older browsers support at least
-          ECMAScript 3. On June 17, 2015, ECMA International published the sixth
-          major version of ECMAScript, which is officially called ECMAScript
-          2015, and was initially referred to as ECMAScript 6 or ES6. Since
-          then, ECMAScript standards are on yearly release cycles. This
-          documentation refers to the latest draft version, which is currently
-          ECMAScript 2020.
+          The standard for JavaScript is ECMAScript. As of 2012, all modern browsers fully support
+          ECMAScript 5.1. Older browsers support at least ECMAScript 3. On June 17, 2015, ECMA
+          International published the sixth major version of ECMAScript, which is officially called
+          ECMAScript 2015, and was initially referred to as ECMAScript 6 or ES6. Since then,
+          ECMAScript standards are on yearly release cycles. This documentation refers to the latest
+          draft version, which is currently ECMAScript 2020.
         </p>
       </section>
     </main>
     <footer>
       <section>
         <a class="logo" href="#">
-          <img
-            src="../img/logo_v2_blanco.png"
-            alt="Logo fakeMdn"
-            title="Logo"
-          />
+          <img src="../img/logo_v2_blanco.png" alt="Logo fakeMdn" title="Logo" />
         </a>
       </section>
     </footer>
