Cambia los fakeForEach por _forEach

--- a/functions/_forEach.html
+++ b/functions/_forEach.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <main>
-      <h1>_fakeForEach()</h1>
+      <h1>_forEach()</h1>
       <nav class="fn-navbar">
         <ul>
           <li class="fn-navbar-item">
@@ -70,9 +70,9 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>fakeForEach()</code>ejecuta la función indicada una vez por cada elemento del array.</p>
+            <p>El método <code>_forEach()</code>ejecuta la función indicada una vez por cada elemento del array.</p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">fakeForEach(<em>array</em>, <em>callback</em>)</p>
+            <p class="syntaxbox">_forEach(<em>array</em>, <em>callback</em>)</p>
             <h3>Parámetros</h3>
             <dl>
               <dt>
@@ -99,8 +99,8 @@
             <pre>
             <code class="javascript">
 let array = ['a', 'b', 'c']; 
-fakeForEach(array, function(element){         
-fakeForEach(array, function(element){          
+_forEach(array, function(element){         
+_forEach(array, function(element){          
 console.log(element);       
 })          
 // output: "a"
