Corrige links a métodos

--- a/functions/_forEach.html
+++ b/functions/_forEach.html
@@ -52,21 +52,23 @@
           <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
           <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
           <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-          <li class="sidebar-item"><a href="_includes" target="_blank" rel="noopener noreferrer">_includes</a></li>
-          <li class="sidebar-item"><a href="_map" target="_blank" rel="noopener noreferrer">_map</a></li>
-          <li class="sidebar-item"><a href="_filter" target="_blank" rel="noopener noreferrer">_filter</a></li>
-          <li class="sidebar-item"><a href="_reduce" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-          <li class="sidebar-item"><a href="_indexOf" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-          <li class="sidebar-item"><a href="_indexOfRecursive" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
-          <li class="sidebar-item"><a href="_intersection" target="_blank" rel="noopener noreferrer">_intersection</a></li>
-          <li class="sidebar-item"><a href="_union" target="_blank" rel="noopener noreferrer">_union</a></li>
-          <li class="sidebar-item"><a href="_sum" target="_blank" rel="noopener noreferrer">_sum</a></li>
-          <li class="sidebar-item"><a href="_min" target="_blank" rel="noopener noreferrer">_min</a></li>
-          <li class="sidebar-item"><a href="_max" target="_blank" rel="noopener noreferrer">_max</a></li>
-          <li class="sidebar-item"><a href="_findIndex" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
-          <li class="sidebar-item"><a href="_lastIndexOf" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
-          <li class="sidebar-item"><a href="_concat" target="_blank" rel="noopener noreferrer">_concat</a></li>
-          <li class="sidebar-item"><a href="_isEqual" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
+          <li class="sidebar-item"><a href="_includes.html" target="_blank" rel="noopener noreferrer">_includes</a></li>
+          <li class="sidebar-item"><a href="_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
+          <li class="sidebar-item"><a href="_filter.hmtl" target="_blank" rel="noopener noreferrer">_filter</a></li>
+          <li class="sidebar-item"><a href="_reduce.hmtl" target="_blank" rel="noopener noreferrer">_reduce</a></li>
+          <li class="sidebar-item"><a href="_indexOf.hmtl" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
+          <li class="sidebar-item">
+            <a href="_indexOfRecursive.hmtl" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
+          </li>
+          <li class="sidebar-item"><a href="_intersection.hmtl" target="_blank" rel="noopener noreferrer">_intersection</a></li>
+          <li class="sidebar-item"><a href="_union.hmtl" target="_blank" rel="noopener noreferrer">_union</a></li>
+          <li class="sidebar-item"><a href="_sum.hmtl" target="_blank" rel="noopener noreferrer">_sum</a></li>
+          <li class="sidebar-item"><a href="_min.hmtl" target="_blank" rel="noopener noreferrer">_min</a></li>
+          <li class="sidebar-item"><a href="_max.hmtl" target="_blank" rel="noopener noreferrer">_max</a></li>
+          <li class="sidebar-item"><a href="_findIndex.hmtl" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
+          <li class="sidebar-item"><a href="_lastIndexOf.hmtl" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
+          <li class="sidebar-item"><a href="_concat.hmtl" target="_blank" rel="noopener noreferrer">_concat</a></li>
+          <li class="sidebar-item"><a href="_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
         </ul>
       </aside>
       <section class="content">
