add function _min and add url in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="sidebar-item"><a href="functions/_intersection" target="_blank" rel="noopener noreferrer">_intersection</a></li>
           <li class="sidebar-item"><a href="functions/_union" target="_blank" rel="noopener noreferrer">_union</a></li>
           <li class="sidebar-item"><a href="functions/_sum" target="_blank" rel="noopener noreferrer">_sum</a></li>
-          <li class="sidebar-item"><a href="functions/_min" target="_blank" rel="noopener noreferrer">_min</a></li>
+          <li class="sidebar-item"><a href="functions/_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
           <li class="sidebar-item"><a href="functions/_max" target="_blank" rel="noopener noreferrer">_max</a></li>
           <li class="sidebar-item"><a href="functions/_findIndex" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
           <li class="sidebar-item"><a href="functions/_lastIndexOf" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
