comment repeated url function find

--- a/functions/_min.html
+++ b/functions/_min.html
@@ -52,7 +52,7 @@
           <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
           <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
           <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-          <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
+          <!-- <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li> -->
           <li class="sidebar-item"><a href="_includes.html" target="_blank" rel="noopener noreferrer">_includes</a></li>
           <li class="sidebar-item"><a href="_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
           <li class="sidebar-item"><a href="_filter.hmtl" target="_blank" rel="noopener noreferrer">_filter</a></li>
